Alterações feitas no index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <div class="search-container">
-            <input type="text" id="movie-name" placeholder="Coloque nome do filme aqui..." >
+            <input type="text" id="movie-name" placeholder="Coloque nome do filme/série aqui..." >
             <button id="search-btn">Pesquisar</button>
         </div>
         <div id="result"></div>
